--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
     <br/>
         <br/>
     <p class="author">
-        Coded by <a href="https://www.linkedin.com/in/vasylievaolha/">Olha Vasylieva</a>
+        Coded by <a href="https://github.com/olhavasylievadev/weather-app">Olha Vasylieva</a>
     </p>
 </div>
 </div>
