--- a/index.html
+++ b/index.html
@@ -30,22 +30,21 @@
     <h1>
         Berlin
     </h1>
-    <h2>
-        <span>☁️  <span id="temperature">13</span></span><a href="#" id="celsius">°C</a>|<a href="#" id="fahrenheit">°F</a>
-    </h2>
         <div id="date">
             Today, time
         </div>
-    <div class="conditions">
-        <div id="humidity">
-        Humidity:  <strong>67%</strong>
+        <div id="weather-is">
+            Cloudy
         </div>
-        <div id="real-feel">
-        Feels like: <strong>12°C</strong>
-    </div>
-        <div id="wind-speed">
-        Wind: <strong id="windy">8 km/h</strong>
-    </div>
+    <h2>
+        <span>☁️  <span id="temperature">13</span></span><a href="#" id="celsius">°C</a>|<a href="#" id="fahrenheit">°F</a>
+    </h2>
+    <div class="conditions">
+        <ul>
+            <li id="humidity">Humidity: <strong>67%</strong></li>
+            <li id="real-feel">Feels like: <strong>12°C</strong></li>
+            <li id="wind-speed">Wind: <strong id="windy">8km/h</strong></li>
+        </ul>
     </div>
 
     <div class="row">
@@ -110,7 +109,7 @@
     <br/>
         <br/>
     <p class="author">
-        Coded by <a href="https://github.com/olhavasylievadev/weather-app">Olha Vasylieva</a>
+        Coded by <a href="https://github.com/olhavasylievadev/weather-app" target="_blank">Olha Vasylieva</a>
     </p>
 </div>
 </div>
