--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         </div>
         <br/>
 
+        <div>
     <h1>
         Berlin
     </h1>
@@ -36,9 +37,14 @@
         <div id="weather-is">
             Cloudy
         </div>
-    <h2>
-        <span>☁️  <span id="temperature">13</span></span><a href="#" id="celsius">°C</a>|<a href="#" id="fahrenheit">°F</a>
-    </h2>
+        </div>
+        <div class="d-flex weather-temperature">
+            <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/077/753/original/pngegg_cloud.png?1681829600" alt="Cloudy" id="icon" />
+            <div>
+                <strong id="temperature">12</strong
+                ><span class="system"><span class="units"> °C </span><span>|</span><span class="imperial"> °F</span></span>
+            </div>
+        </div>
     <div class="conditions">
         <ul>
             <li id="humidity">Humidity: <strong>67%</strong></li>
