Added unit conversion

--- a/index.html
+++ b/index.html
@@ -32,17 +32,17 @@
         Berlin
     </h1>
         <div id="date">
-            Today, time
+            Friday 09:27
         </div>
         <div id="weather-is">
             Cloudy
         </div>
         </div>
         <div class="d-flex weather-temperature">
-            <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/077/753/original/pngegg_cloud.png?1681829600" alt="Cloudy" id="icon" />
+            <img src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/rain-day.png" alt="light-rain" id="icon" />
             <div>
                 <strong id="temperature">12</strong
-                ><span class="system"><span class="units"> °C </span><span>|</span><span class="imperial"> °F</span></span>
+                ><span class="system"><span class="units active"> °C </span><span>|</span><span class="imperial"> °F</span></span>
             </div>
         </div>
     <div class="conditions">
