--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </div>
         <div class="d-flex weather-temperature">
             <img src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/rain-day.png" alt="light-rain" id="icon" />
-            <div>
+            <div class="text-weather">
                 <strong id="temperature">12</strong
                 ><span class="system"><span class="units active"> °C </span><span>|</span><span class="imperial"> °F</span></span>
             </div>
