--- a/index.html
+++ b/index.html
@@ -52,66 +52,7 @@
             <li id="wind-speed">Wind: <strong id="windy">8km/h</strong></li>
         </ul>
     </div>
-
-    <div class="row">
-        <div class="col reg">
-            Saturday
-        </div>
-        <div class="col reg">
-            Sunday
-        </div>
-        <div class="col reg">
-            Monday
-        </div>
-        <div class="col reg">
-            Tuesday
-        </div>
-        <div class="col reg">
-            Wednesday
-        </div>
-    </div>
-    <div class="row">
-        <div class="col image">
-            ☀️
-            <div class="row">
-                <div class="col regular">
-                    7° / <strong>12°</strong>
-                </div>
-            </div>
-        </div>
-        <div class="col image">
-            ⛅️
-            <div class="row">
-                <div class="col regular">
-                    5° / <strong>11°</strong>
-                </div>
-            </div>
-        </div>
-        <div class="col image">
-            ⛈️
-            <div class="row">
-                <div class="col regular">
-                    -1° / <strong>7°</strong>
-                </div>
-            </div>
-        </div>
-        <div class="col image">
-            🌦️
-            <div class="row">
-                <div class="col regular">
-                    -2° / <strong>8°</strong>
-                </div>
-            </div>
-        </div>
-        <div class="col image">
-            🌤️
-            <div class="row">
-                <div class="col regular">
-                    2° / <strong>9°</strong>
-                </div>
-            </div>
-        </div>
-    </div>
+        <div class="weather-forecast" id="forecast"></div>
     <br/>
         <br/>
     <p class="author">
