--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
 <body>
 <div class="container">
     <br/>
-    <br/>
     <div class="frame">
         <div class="d-flex flex-column gap-4">
             <form class="d-flex">
@@ -32,7 +31,6 @@
         Berlin
     </h1>
         <div id="date">
-            Friday 09:27
         </div>
         <div id="weather-is">
             Cloudy
@@ -41,15 +39,15 @@
         <div class="d-flex weather-temperature">
             <img src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/rain-day.png" alt="light-rain" id="icon" />
             <div class="text-weather">
-                <strong id="temperature">12</strong
-                ><span class="system"><span class="units active"> °C </span><span>|</span><span class="imperial"> °F</span></span>
+                <strong id="temperature"></strong
+                ><span class="system"><span class="units active"> °C </span></span>
             </div>
         </div>
     <div class="conditions">
         <ul>
-            <li id="humidity">Humidity: <strong>67%</strong></li>
-            <li id="real-feel">Feels like: <strong>12°C</strong></li>
-            <li id="wind-speed">Wind: <strong id="windy">8km/h</strong></li>
+            <li id="humidity">Humidity: <strong>%</strong></li>
+            <li id="real-feel">Feels like: <strong>°C</strong></li>
+            <li id="wind-speed">Wind: <strong id="windy">km/h</strong></li>
         </ul>
     </div>
         <div class="weather-forecast" id="forecast"></div>
